FOLREL-612: Update mod-linked-data to Java 21
FOLREL-612: Update libraries and add github workflow